# fiobank

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  fiobank.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: copilot-setup-steps.yml  release.yml  test.yml
src/fiobank/: __init__.py  exceptions.py  fiobank.py  models.py  models_backup.py  utils.py
tests/: test_coerce_date.py  test_fiobank.py  test_pydantic_models.py  test_sanitize_value.py
tests/fixtures/: periods.json
