[project]
name = "fiobank"
version = "4.0.0"
description = "Fio Bank API in Python (unofficial)"
readme = "README.rst"
authors = [
    {name = "Honza Javorek", email = "mail@honzajavorek.cz"},
]
license = {text = "ICS"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "requests<3.0.0,>=2.28.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

[project.urls]
repository = "https://github.com/honzajavorek/fiobank"

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.2.1",
    "responses<1.0.0,>=0.22.0",
    "mock<6.0.0,>=5.0.1",
    "ruff<1.0.0,>=0.8.4",
    "pytest-ruff<1.0.0,>=0.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests"
norecursedirs = "env venv .git"
addopts = "--ff --ruff --ruff-format"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
