[project]
name = "fiobank"
version = "4.0.0"
description = "Fio Bank API in Python (unofficial)"
readme = "README.rst"
authors = [{name = "Honza Javorek", email = "mail@honzajavorek.cz"}]
license = {text = "ICS"}
requires-python = "<4.0,>=3.9"
dependencies = [
    "requests<3.0.0,>=2.28.2",
    "tenacity>=9.0.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
]

[project.urls]
repository = "https://github.com/honzajavorek/fiobank"

[dependency-groups]
dev = [
    "mock>=5.0.1",
    "pytest-cov>=6.0.0",
    "pytest-ruff>=0.4.1",
    "pytest>=7.2.1",
    "responses>=0.22.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "tests"
norecursedirs = "env venv .git"
addopts = "--ff --ruff --ruff-format --cov=fiobank --cov-report=term-missing:skip-covered --cov-context=test"
filterwarnings = ["ignore:Using float for money can cause inaccuracies:DeprecationWarning"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
